--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,8 +1,3 @@
-<input type="checkbox"
-       id="menu-controller"
-       class="menu-controller"
-       hidden>
+<input type="checkbox" id="menu-controller" class="menu-controller" hidden />
 
-<header class="header">
-  {{ partial "menu.html" . }}
-</header>
+<header class="header">{{ partial "menu.html" . }}</header>
